# rust-fractal-gui

./: Cargo.toml
src/: ui.rs
src/widgets/: either.rs  fractal.rs
