[package]
name = "rust_fractal_gui"
version = "0.3.0"
authors = ["jackyarndley <34801340+jackyarndley@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.druid]
git = "https://github.com/linebender/druid"
# rev = "4fe3939" # update this when upgrading to newer druid
# rev = "399c454"

[dependencies.druid-widget-nursery]
git = "https://github.com/linebender/druid-widget-nursery.git"
rev = "c77e67a"

[dependencies]
rust_fractal = {path = "../rust-fractal-core"}
config = "0.14.0"
parking_lot = { version = "0.12.1", features = ["nightly"] }
float_eq = "1.0.1"

[build-dependencies]
vergen = { version = "^8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
anyhow = "1.0.81"

[profile.release]
lto = "fat"